# Image-Processing-Application

./: .gitignore  CMakeLists.txt  Doxyfile  LICENCE  README.md  REFERENCE.md  dependencies.txt  ~$oupProject-ReportTemplate.docx
html/: _colour_correction_8cpp.html  _colour_correction_8h.html  _colour_correction_8h_source.html  _colour_correction_test_8cpp.html  _colour_correction_test_8h.html  _colour_correction_test_8h_source.html  _edge_detection_8cpp.html  _edge_detection_8h.html  _edge_detection_8h_source.html  _edge_detection_test_8cpp.html  _edge_detection_test_8h.html  _edge_detection_test_8h_source.html  _filter_8h.html  _filter_8h_source.html  _image_8cpp.html  _image_8h.html  _image_8h_source.html  _image_blur_8cpp.html  _image_blur_8h.html  _image_blur_8h_source.html  _image_blur_test_8cpp.html  _image_blur_test_8h.html  _image_blur_test_8h_source.html  _projection_8cpp.html  _projection_8h.html  _projection_8h_source.html  _projection_test_8cpp.html  _projection_test_8h.html  _projection_test_8h_source.html  _slice_8cpp.html  _slice_8h.html  _slice_8h_source.html  _test_8h.html  _test_8h_source.html  _three_d_filter_8cpp.html  _three_d_filter_8h.html  _three_d_filter_8h_source.html  _three_d_filter_test_8cpp.html  _three_d_filter_test_8h.html  _three_d_filter_test_8h_source.html  (+66 more)
src/: ColourCorrection.cpp  ColourCorrection.h  ColourCorrectionTest.cpp  ColourCorrectionTest.h  EdgeDetection.cpp  EdgeDetection.h  EdgeDetectionTest.cpp  EdgeDetectionTest.h  Filter.h  Image.cpp  Image.h  ImageBlur.cpp  ImageBlur.h  ImageBlurTest.cpp  ImageBlurTest.h  Projection.h  (+27 more)
(+36 files in other folders)
